[gd_scene load_steps=7 format=2]

[ext_resource path="res://ColorBlindTest/Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://MainMenu/UI/mainMenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://Email/GlobalTimer/ResetGamePopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://ColorBlindTest/Sprites/Clipboard.png" type="Texture" id=10]
[ext_resource path="res://ColorBlindTest/Sprites/Background.jpg" type="Texture" id=13]
[ext_resource path="res://ColorBlindTest/Sprites/Tutorial.png" type="Texture" id=14]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 13 )
centered = false

[node name="MainMenu" type="Control" parent="."]
visible = false
theme = ExtResource( 2 )

[node name="Clipboard" type="Sprite" parent="MainMenu"]
position = Vector2( 512, 300 )
texture = ExtResource( 10 )

[node name="StartButton" type="Button" parent="MainMenu"]
margin_left = 450.0
margin_top = 191.0
margin_right = 588.0
margin_bottom = 241.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 69, 25 )
text = "Start Test"

[node name="HelpButton" type="Button" parent="MainMenu"]
margin_left = 450.0
margin_top = 291.0
margin_right = 588.0
margin_bottom = 341.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 69, 25 )
text = "Help"

[node name="BackButton" type="Button" parent="MainMenu"]
margin_left = 450.0
margin_top = 391.0
margin_right = 588.0
margin_bottom = 441.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 69, 25 )
text = "Quit"

[node name="TutorialScreen" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )

[node name="TutorialSprite" type="Sprite" parent="TutorialScreen"]
scale = Vector2( 0.555, 0.555 )
texture = ExtResource( 14 )
centered = false

[node name="ReturnButton" type="Button" parent="TutorialScreen"]
margin_left = 488.0
margin_top = 544.0
margin_right = 622.0
margin_bottom = 594.0
text = "Main Menu"

[node name="TutorialMessages" type="Control" parent="TutorialScreen"]
margin_right = 40.0
margin_bottom = 40.0

[node name="TimeTutorial" type="Label" parent="TutorialScreen/TutorialMessages"]
margin_left = 433.0
margin_top = 168.0
margin_right = 664.0
margin_bottom = 192.0
text = "Time Remaining"
align = 1

[node name="CalculatorTutorial" type="Label" parent="TutorialScreen/TutorialMessages"]
margin_left = 440.0
margin_top = 216.0
margin_right = 671.0
margin_bottom = 357.0
text = "Tap on the number 
in the calculator 
that corresponds 
with the number
 in the circle. 
Then press enter."
align = 1

[node name="PassTutorial" type="Label" parent="TutorialScreen/TutorialMessages"]
margin_left = 368.0
margin_top = 408.0
margin_right = 744.0
margin_bottom = 525.0
text = "If you don't 
see a number 
in the circle, 
just press 
\"enter\" or \"pass.\""
align = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Popup" parent="CanvasLayer" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0

[connection signal="button_down" from="MainMenu/StartButton" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="MainMenu/HelpButton" to="." method="_on_HelpButton_button_down"]
[connection signal="button_down" from="MainMenu/BackButton" to="." method="_on_BackButton_button_down"]
[connection signal="button_down" from="TutorialScreen/ReturnButton" to="." method="_on_ReturnButton_button_down"]
